Agregado el servicio de mascotas y corregida la excepción